@@ -43,22 +43,28 @@ a:hover {
 }
 
 p.location {
+	background: #edeaaf
 }
 
 td.menuleftedge {
+  background: #fdfabf;
 }
 
 td.menurightedge {
+  background: #888888; 
 }
 
 td.menuactiveleftedge {
+   background: #edeaaf;
 }
 
 td.menuactiverightedge {
+  background: #888888; 
 }
 
 
 td.menu {
+  background: #fdfabf;
   padding-left: .75em;
   padding-right: .75em;
   padding-top: 0.5em;
@@ -70,6 +76,7 @@ td.menuunclickable {
 }
 
 td.menuactive {
+    background: #edeaaf;
     padding-left: .75em;
     padding-right: .75em;
     padding-top: 0.5em;
