@@ -42,6 +42,6 @@ content
 </tr>
 </table>
 
-
+<p align=right>
 Next: <a href=implementing-notation.html>Impressive, but does it also
 work in theory</a>? A practical approach to capturing notation.
